fixed image overflow on login page

--- a/client/src/assets/css/logIn.css
+++ b/client/src/assets/css/logIn.css
@@ -1,6 +1,5 @@
 img{
-    height: 400px;
-    width: 400px;
+    width: 100%;
 }
 
 .mainContainer{
